# FlaskVerseHub

./: .env.example  .gitignore  CHANGELOG.md  README.md  generate_flaskversehub.sh  manage.py  pytest.ini  setup.cfg  wsgi.py
.github/workflows/: cd.yml  ci.yml
app/: __init__.py  config.py  extensions.py  models.py
app/api_hub/: __init__.py  graphql_routes.py  pagination.py  rest_routes.py  schemas.py  serializers.py
app/api_hub/docs/: openapi.yaml  swagger_ui.html
app/api_hub/tests/: test_graphql_api.py  test_rest_api.py
app/auth/: __init__.py  decorators.py  forms.py  jwt_utils.py  routes.py
app/auth/templates/: login.html  profile.html  register.html  reset_password_request.html
app/auth/tests/: test_auth_routes.py  test_decorators.py
app/cli/: __init__.py  db_commands.py  user_commands.py
app/dashboard/: __init__.py  events.py  routes.py  sockets.py
app/errors/: __init__.py
app/errors/templates/: 404.html  500.html
app/knowledge_vault/: __init__.py  forms.py  routes.py
app/knowledge_vault/static/css/: vault.css
app/knowledge_vault/static/js/: vault.js
app/knowledge_vault/templates/: vault_create.html  vault_detail.html  vault_edit.html  vault_index.html
app/knowledge_vault/tests/: test_forms.py  test_routes.py
app/main/: __init__.py  routes.py
app/security/: csrf_protection.py  input_sanitization.py  password_utils.py
app/static/css/: base.css  dashboard.css  form.css
app/static/js/: dashboard.js  main.js  socket.js
app/templates/: base.html  layout.html
app/templates/macros/: form_macros.html  modal_macros.html  pagination_macros.html
app/templates/main/: index.html
app/templates/shared_components/: flash_messages.html  footer.html  navbar.html  sidebar.html
app/utils/: cache_utils.py  email_utils.py  rate_limiting.py
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  README.md
migrations/: README.md
requirements/: base.txt  dev.txt  prod.txt  test.txt
scripts/: deploy.sh  run_tests.sh  setup_dev.sh
tests/: conftest.py  test_config.py  test_models.py
tests/integration/: test_full_workflow.py
