# File: FlaskVerseHub/setup.cfg

[metadata]
name = FlaskVerseHub
version = 1.0.0
description = A comprehensive Flask application showcasing CRUD operations, API development, real-time features, and authentication
long_description = file: README.md
long_description_content_type = text/markdown
author = FlaskVerseHub Team
author_email = contact@flaskversehub.com
url = https://github.com/your-username/FlaskVerseHub
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
zip_safe = False
install_requires =
    Flask>=2.3.0
    Flask-SQLAlchemy>=3.0.0
    Flask-Migrate>=4.0.0
    Flask-Login>=0.6.0
    Flask-WTF>=1.1.0
    Flask-Mail>=0.9.1
    Flask-Caching>=2.0.0
    Flask-SocketIO>=5.3.0
    Flask-JWT-Extended>=4.5.0
    Flask-CORS>=4.0.0
    WTForms>=3.0.0
    SQLAlchemy>=2.0.0
    Werkzeug>=2.3.0
    PyJWT>=2.8.0
    bcrypt>=4.0.0
    email-validator>=2.0.0
    python-dotenv>=1.0.0
    redis>=4.6.0
    graphene>=3.3.0
    graphene-sqlalchemy>=3.0.0
    marshmallow>=3.20.0
    marshmallow-sqlalchemy>=0.29.0

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    pytest-flask>=1.2.0
    pytest-mock>=3.11.0
    black>=23.7.0
    flake8>=6.0.0
    mypy>=1.5.0
    pre-commit>=3.3.0
prod =
    gunicorn>=21.2.0
    psycopg2-binary>=2.9.0
    mysql-connector-python>=8.1.0
test =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    pytest-flask>=1.2.0
    pytest-mock>=3.11.0
    coverage>=7.3.0

[options.packages.find]
exclude = tests*

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    .tox,
    .eggs,
    *.egg,
    build,
    dist,
    migrations

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
ignore_missing_imports = True

[coverage:run]
source = app
omit = 
    */venv/*
    */env/*
    */tests/*
    */migrations/*
    manage.py
    wsgi.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError